# benchmark-zai

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.opencode/: README.md
.opencode/skills/zai-benchmark/: SKILL.md
.opencode/tools/: zai-benchmark.ts  zai-models.ts
src/benchmark_zai/: __init__.py  __main__.py  benchmark.py  cli.py  models.py  utils.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_utils.py
